--- a/components/navbar/Navbar.module.css
+++ b/components/navbar/Navbar.module.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: relative;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -81,4 +82,58 @@
 .links {
   display: flex;
   flex-direction: column;
+}
+@media (max-width: 800px) {
+  .navModil {
+    width: 100%;
+    height: 100%;
+    background-color: #222;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+  }
+  .ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    top: 5rem;
+  }
+  .a {
+    color: white;
+  }
+  .a:hover {
+    color: var(--m2);
+    background-color: #222;
+  }
+  .a:hover::before {
+    left: -100%;
+  }
+  .navModil hr {
+    width: 100%;
+    position: absolute;
+    top: 3.5rem;
+  }
+  .title {
+    width: 100%;
+    position: absolute;
+    font-size: 1.5rem;
+    top: 1.4rem;
+    left: 50%;
+    color: white;
+    transform: translateX(50%);
+  }
+  .closeBtn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 5px;
+    color: black;
+    background-color: #fff;
+    border: 2px solid #fff;
+    cursor: pointer;
+  }
 }
