--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,9 @@
   --m2: #3095b4;
   --m3: #19728d;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 html,
 body {
   padding: 0;
@@ -13,6 +15,9 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+ul {
+  list-style: none;
+}
 a {
   color: inherit;
   text-decoration: none;
