--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,9 @@ body {
 
 ul {
   list-style: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
 }
 a {
   color: inherit;
